--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
 
                     <div class="col-xl-5 col-lg-4 col-md-6 footer-list-29 footer-1 px-xl-5 mt-md-0 mt-5">
                         <h6 class="footer-title-29">Contact Info </h6>
-                        <p class="mb-2">Address : Foodie, 10001, G.veerapuram, #oc colny street, KNL - 6/52.
+                        <p class="mb-2">Address : Foodie, 10001, G.veerapuram, #oc colny street, KNL - 518422.
                         </p>
                         <p class="mb-2">Phone Number : <a href="tel:+91 9182108193">+(91) 9182108193</a></p>
                         <p class="mb-2">Email : <a href="mailto:sigarambatlavikas123@gmail.com">sigarambatlavikas123@gmail.com</a></p>
