--- a/about.html
+++ b/about.html
@@ -543,11 +543,11 @@
 
                     <div class="col-xl-5 col-lg-4 col-md-6 footer-list-29 footer-1 px-xl-5 mt-md-0 mt-5">
                         <h6 class="footer-title-29">Contact Info </h6>
-                        <p class="mb-2">Address : Foodie, 10001, 5th Avenue, #06 lane street, NY - 62617.
+                        <p class="mb-2">Address : Foodie, 10001, G.veerapuram, #oc colony , KNL - 518422.
                         </p>
-                        <p class="mb-2">Phone Number : <a href="tel:+1(21) 234 4567">+1(21) 234 4567</a></p>
-                        <p class="mb-2">Email : <a href="mailto:info@example.com">info@example.com</a></p>
-                        <p>Support : <a href="mailto:info@support.com">info@support.com</a></p>
+                        <p class="mb-2">Phone Number : <a href="tel:+(91)9182108193 ">+(91)9182108193</a></p>
+                        <p class="mb-2">Email : <a href="mailto:sigarambatlavikas123.com">sigarambatlavikas123.com</a></p>
+                        <p>Support : <a href="sigarambatlavikas123.com">sigarambatlavikas123.com</a></p>
                     </div>
 
                     <div class="col-xl-2 col-lg-3 col-md-6 col-sm-5 col-6 footer-list-29 footer-2 mt-lg-0 mt-5">
